# P2PClient

./: CMakeLists.txt  README.md  appconfig.cpp  appconfig.h  build_debug.ps1  config.json  deploy_release.ps1  filetransfermanager.cpp  filetransfermanager.h  generate_vs_solution.ps1  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  p2pclient.cpp  p2pclient.h  test_main.cpp
.github/workflows/: cmake-multi-platform.yml
